# mood-tracker

./: .gitignore  README.md  backend.md  day2.md  docker-compose.yml  task.md
backend/: .env.sample  .gitignore  README.md  main.py  mental_health.db  pyproject.toml  requirements.txt  test_database_stress.py  test_day3_complete.py  test_websocket_day3.py
backend/app/: database.py
backend/app/ai/: __init__.py  assistant.py  assistant_fallback.py  basic_sentiment.py  conversation_memory.py  crisis_detector.py  emotion_classifier.py  emotion_detector.py  gemini_service.py  model_manager.py  mood_analyzer.py  mood_predictor.py  sentiment_analyzer.py  text_analyzer.py  voice_processor.py
backend/app/auth/: __init__.py  auth_handler.py  schemas.py
backend/app/models/: __init__.py  analytics.py  mood.py  user.py
backend/app/services/: crisis_management.py
backend/mental_health_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_e2e_production.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/dev-dist/: sw.js  sw.js.map  workbox-55d1eca6.js  workbox-55d1eca6.js.map  workbox-7314bb95.js  workbox-7314bb95.js.map
frontend/public/: sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ErrorBoundary.jsx  OfflineStatus.jsx  PWAInstallPrompt.jsx  ProtectedRoute.jsx  ServiceWorkerUpdate.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/ai/: AIAssistantButton.jsx  AIAssistantChat.jsx  AIInsightWidget.jsx
frontend/src/components/animations/: PageTransition.jsx  StaggeredCards.jsx
frontend/src/components/charts/: EmotionDistributionChart.jsx  MoodTrendChart.jsx
frontend/src/components/dashboard/: AIInsightsDashboard.jsx  EnhancedMetricCard.jsx  QuickActionsWidget.jsx
frontend/src/components/layout/: Footer.jsx
frontend/src/components/navigation/: Breadcrumb.jsx  MobileNavigation.jsx  PageTransition.jsx  TabNavigation.jsx
frontend/src/components/notifications/: NotificationManager.jsx
frontend/src/contexts/: AuthContext.jsx  MoodContext.jsx  ThemeContext.jsx
frontend/src/hooks/: usePWA.js  useSwipe.js
frontend/src/pages/: CrisisSupport.jsx  Dashboard.jsx  HomePage.jsx  MoodCheck.jsx  Navigation.jsx
frontend/src/services/: NotificationService.js  SmartNotificationScheduler.js  VoiceService.js  websocket.js
frontend/src/styles/: base.css  design-tokens.css
frontend/src/utils/: notificationManager.js  offlineManager.js  performance.js  performanceTest.js
(+19 files in other folders)
